overflow fixed

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1, h2, h3, button, .btn {
 body {
     color: var(--black);
     background: var(--white);
+    overflow-x: hidden;
 }
 
 #hero {
